# ffmpeg-w32codec

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  config.sh  mingw32-clang.cmake  mingw32.bat
include/: common.h  msacmdrv.h
src/: common.cpp
src/acmdrv/: acmdrv.h  driver.cpp  format.cpp  main.cpp  stream.cpp
src/dsfilter/: dsfilter.cpp  dsfilter.h  input.cpp  main.cpp  output.cpp  typemap.cpp
src/dsfilter/baseclasses/: amfilter.cpp  amvideo.cpp  dllentry.cpp  mtype.cpp  refclock.cpp  refclock.h  streams.h  wxdebug.cpp
src/vcmdrv/: driver.cpp  ic.cpp  main.cpp  vcmdrv.def  vcmdrv.h
tests/msacm32/: main.cpp
tests/msvfw32/: main.cpp
tests/quartz/: main.cpp
